Changelog
=========


2.2 (unreleased)
----------------

- Implements some workflow adjustments:
   - Removed resolved-open(wieder eroeffnen) transition.
  [phgross]

- Task overview: display responsible of tasks referenced in response.
  [jone]

- Delegate: fix pointer on response to subtask.
  [jone]

- Delegate: do not inherit predecessor from parent to subtasks.
  [jone]

- Delegate: fix bug when there are no related documents.
  [jone]

- Task overview: display responsible of subtasks.
  [jone]

- Display workflow state icon for related tasks in task overview.
  [jone]

- Display issuer client in task overview.
  [jone]

- Reponse: support for referencing multiple added documents in one response.
  [jone]

- Implement task delegate wizard.
  Issue #1343 "Aufgabe Delegieren" Wizard
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1343
  [jone]

- Implement task accept wizard.
  Issue #1342 "Aufgabe akzeptieren" Wizard
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1342
  [jone]

- Moved the workflow guards checks in to a TaskTransitionController and added Tests.
  [phgross]

- Fixed the guard expresssion for the 'task-transition-rejected-open' transition.
  [phgross]

- The localrolesetter authorize now also the inbox_group of the responsible_client.
  Issue #1295 Bei Mandantenuebergreifenden Aufgaben auch Eingangskorb mitberechtigen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1295
  [phgross]

- Adjsut the transitioncontroller: for inbox group users it should also be possible to resolve and the accept tasks.
  Issue #1296 Task Workflow Guards: Eingangskorb Benutzer sollen auch Aufgaben akzeptieren und erledigen koennen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1296
  [phgross]

- Moved the workflow guards checks in to a TaskTransitionController and added Tests.
  [phgross]

2.1 (2012-01-13)
----------------
